--- a/fil/flores/flower.html
+++ b/fil/flores/flower.html
@@ -1,11 +1,11 @@
-<p>For Filsaney's</p>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>flowers</title>
+    <title>Filsaney's</title>
 </head>
 <body class="container">
     <div class="night"></div>
